fix: left align card info

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -381,6 +381,10 @@ body {
   opacity: 0.85;
 }
 
+.info {
+  text-align: left;
+}
+
 .member-profile .info {
   flex: 1;
   display: flex;
